--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,51 +1,24 @@
-/* body {
-	background-color: pink;
+/*
+	Box Model
+	Content
+	Padding
+	Border
+	Margin
+*/
+h1{
+	font-family: Roboto;
+	text-align: left;
+	font-size: 23px;
+	font-weight: bold;
+	text-transform: uppercase;
+	border-bottom: 3px solid #f1f1f1;
+	width: 300px;
+	margin-left: 1.66%;
+	padding-bottom: 20px;
 }
 
-h1 {
-	color:red;
-	border-color: purple;
-	border-width: 5px;
-	border-style: dotted;
-	border: 5px solid purple;
+img{
+	float: left;
+	width: 30%;
+	margin: 1.66%;
 }
-
-h4 {
-	background-color: rgb(255, 100, 80);
-}
- */
-
-/*  body {
- 	background-color: orange;
- } */
-
-* {
-	border: 1px solid lightgrey;
-	margin: 0;
-	padding: 0;
-}
-
-/*Descentdant selector*/
-li a {
-	color: red;
-}
-
-/*Adjacent Selector*/
-h4 + ul {
-	border: 4px solid red;
-}
-
-/*Attributes selector*/
-a[href="http://www.google.ca"] {
-	background-color: blue;
-}
-
-/*nth of type*/
-li:nth-of-type(2) {
-	background: purple;
-}
-
-
-
-
-
