--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -5,20 +5,56 @@
 	Border
 	Margin
 */
-h1{
-	font-family: Roboto;
-	text-align: left;
-	font-size: 23px;
-	font-weight: bold;
-	text-transform: uppercase;
-	border-bottom: 3px solid #f1f1f1;
-	width: 300px;
-	margin-left: 1.66%;
-	padding-bottom: 20px;
+body{
+	height: 100%;
+	margin: 0;
+	padding: 0;
+}
+fieldset {
+  border: 0;
+  padding: 0;
+  margin: 0;
+  min-width: 0;
 }
 
-img{
-	float: left;
-	width: 30%;
-	margin: 1.66%;
+.login {
+	background: url(../images/Desktop_HomeBG.jpeg);
+	background-size: cover;
+	background-position: center;
+	height: 100vh;
 }
+
+.row{
+	text-align: center;
+}
+
+.login-container{
+	height: 420px;
+	width: 320px;
+	background-color: #61bade;
+	margin: auto;
+	vertical-align: middle;
+
+}
+
+.login-container #logo{
+	width: 50%
+}
+
+.login-container h1{
+	text-transform: uppercase;
+	font-size: 22px;
+	font-weight: bold;
+	color: lightgray;
+}
+
+
+
+
+
+
+
+
+
+
+
