finish weather search app.

--- a/APIs/weather_search_app/views/home.ejs
+++ b/APIs/weather_search_app/views/home.ejs
@@ -12,7 +12,7 @@
             <form action="/query" method="get">
                 <div class="form-group">
                     <label for="cityInput">City:</label>
-                    <input type="text" name="city" placeholder="Enter city" aria-describedby="weatherAPI" class="form-control">
+                    <input type="text" name="city" placeholder="e.g. Regina, SK" aria-describedby="weatherAPI" class="form-control">
                     <small id="weatherAPI" class="form-text text-muted">We'll use yahoo weather API.</small>
                 </div>
                 <button type="submit" class="btn btn-primary">Query</button>
@@ -20,5 +20,4 @@
         </div>
     </div>
 </div>
-
 <% include partials/footer %>
