--- a/APIs/weather_search_app/views/result.ejs
+++ b/APIs/weather_search_app/views/result.ejs
@@ -2,7 +2,16 @@
 <div class="container">
     <h1 class="text-center text-success">Results</h1>
     <ul class="list-group">
-        <li class="list-group-item active">Cras justo odio</li>
+        <li class="list-group-item active"><%=resultsVar.title %></li>
+        <li class="list-group-item">Tempature: <%=resultsVar.item.condition.temp%> C.</li>
+        <li class="list-group-item"><%=resultsVar.item.condition.text%></li>
+        <li class="list-group-item">Date: <%=resultsVar.item.condition.date%></li>
     </ul>
+    <button onclick="goBack()" type="button" class="btn btn-secondary btn-lg btn-block">Go Back</button>
+    <script>
+    function goBack() {
+        window.history.back();
+    }
+    </script>
 </div>
 <% include partials/footer %>
