--- a/FrankBlogs/views/index.ejs
+++ b/FrankBlogs/views/index.ejs
@@ -1,14 +1,20 @@
 <% include partials/header %>
-
+<div class="ui main text container">
+    <div class="ui huge header">
+        RESTful Blog App
+    </div>
+</div>
 <% blogs.forEach(function(blog){%>
     <div class="ui main text container">
         <h2><%=blog.title%></h2>        
         <div class="ui fluid image">
             <img src="<%=blog.image %>" alt="">
         </div>
-        <span><%=blog.created%></span>
+        <div class="meta">
+            <i class="calendar outline icon"></i><span><%=blog.created.toLocaleDateString()%></span>
+        </div>
         <p><%- blog.body %></p>
-        <a href="/blogs/<%=blog._id%>">Read More</a>
+        <a href="/blogs/<%=blog._id%>" class="ui inverted red button">Read More</a>
     </div>
 <%
 })
